// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/standard/Textbox #render renders with a value 1`] = `
<div>
  <div
    className="formLabel"
    htmlFor="test-field-id"
  >
    Test Label
  </div>
  <div
    className="formValue"
  >
    <input
      id="test-field-id"
      onChange={[Function]}
      type="text"
      value="This is the changed test value"
    />
  </div>
</div>
`;

exports[`components/standard/Textbox #render renders without a value 1`] = `
<div>
  <div
    className="formLabel"
    htmlFor="test-field-id"
  >
    Test Label
  </div>
  <div
    className="formValue"
  >
    <input
      id="test-field-id"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;
